[package]
name = "da_watch_face_uploader"
version = "0.1.0"
authors = ["David Atkinson <david47k@d47.co>"]
edition = "2018"

[features]
serde = ["uuid/serde", "serde_cr", "serde_bytes"]

[dependencies]
"btleplug" = "0.10.3"
async-trait = "0.1.57"
log = "0.4.17"
pretty_env_logger = "0.4.0"
bitflags = "1.3.2"
thiserror = "1.0.35"
uuid = "1.1.2"
serde_cr = { package = "serde", version = "1.0.145", features = ["derive"], default-features = false, optional = true }
serde_bytes = { version = "0.11.7", optional = true }
serde_json = "1.0.85"
dashmap = "5.4.0"
futures = "0.3.24"
static_assertions = "1.1.0"
"rand" = "0.8.5"
tokio = { version = "1.22.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }

